# fiszkiserwer

./: README.md  fiszki.code-workspace
backend/: .env  create.go  go.mod  go.sum  json.go  main.go  users.go
backend/sql/: fiszki.sql
desktop/: CMakeLists.txt
frontend/: package-lock.json  package.json
frontend/src/: index.js  login_manager.js  network_manager.js
frontend/src/pages/: index.js
frontend/src/pages/Create/: index.js
frontend/src/pages/Home/: index.js  style.scss
frontend/src/pages/Login/: index.js  style.scss
frontend/src/pages/Notfound/: index.js  style.scss
frontend/src/pages/Profile/: index.js  style.scss
frontend/src/pages/Root/: index.js  style.scss
frontend/src/pages/Signup/: index.js  style.scss
frontend/src/styles/: colors.scss
frontend/src/widget/: index.js
frontend/src/widget/menubar/: index.js  style.scss  userdefault.js
